--- a/md2html.cabal
+++ b/md2html.cabal
@@ -29,7 +29,7 @@ library
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.17.2.0
+    build-depends:    base
     hs-source-dirs:   src
     default-language: Haskell2010
 
@@ -42,7 +42,7 @@ executable md2html
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:
-        base ^>=4.17.2.0,
+        base,
         md2html
 
     hs-source-dirs:   app
