--- a/md2html.cabal
+++ b/md2html.cabal
@@ -22,14 +22,13 @@ maintainer:         dragolekovic@gmail.com
 extra-source-files: CHANGELOG.md
 
 library
-    exposed-modules:  Md2Html
+    exposed-modules:  Md2Html, MdAst, MdParser
 
-    -- Modules included in this library but not exported.
-    -- other-modules:
+    other-modules: MdParser.Internal
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base
+    build-depends:    base, parsec
     hs-source-dirs:   src
     default-language: Haskell2010
 
@@ -47,3 +46,12 @@ executable md2html
 
     hs-source-dirs:   app
     default-language: Haskell2010
+
+test-suite parser-test
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  hs-source-dirs: test-parser
+  build-depends:
+    base, HUnit, md2html, tasty, tasty-hunit, parsec
+  default-language: Haskell2010
+
